--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ollama": "^0.5.14",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
